Bug 807571 - popup now resizes when sizeTo is called with the same height while open.  r=enndeakin